# Chess-CS202

./: .gitignore  Application.hpp  CMakeLists.txt  Makefile  README.md  Screen.hpp  extract.txt  install.bat  note.md
.github/workflows/: c-cpp.yml
dat/: puzzles.csv  shader.frag
include/: Application.hpp  Chess.hpp  Graphic.hpp  Screen.hpp
include/ChessBoard/: Bitboard.hpp  BitboardProcess.hpp  Board.hpp  Bot.hpp  LogicBoard.hpp  LogicBoardAtomic.hpp  LogicBoardKingHill.hpp  LogicBoardStandard.hpp  Move.hpp  MoveSearching.hpp
include/CustomScreen/: BoardCustomManager.hpp  ButtonPieceGroup.hpp  CustomScreen.hpp
include/DataControl/: Arrow.hpp  Button.hpp  ButtonOption.hpp  ButtonPiece.hpp  Circle.hpp  Color.hpp  FileInit.hpp  FileManager.hpp  GameAttributes.hpp  GameSettings.hpp  Image.hpp  Include.hpp  RenderPS.hpp  RenderRect.hpp  TextBox.hpp  Theme.hpp
include/Helpers/: BoardHelpers.hpp  Fen.hpp  MoveUtility.hpp
include/HomeScreen/: HomeScreen.hpp
include/IngameScreen/: BoardManager.hpp  BoardPrint.hpp  IngameScreen.hpp  NotificationEndGame.hpp  PieceInboardListPrint.hpp  PiecePrint.hpp  PromotionManager.hpp  TimeButton.hpp
include/OptionScreen/: OptionScreen.hpp
include/PuzzlesScreen/: BoardPuzzlesManager.hpp  PuzzlesScreen.hpp
include/SettingScreen/: SettingScreen.hpp
include/StatisticsScreen/: ProcessStatistics.hpp  StatisticsScreen.hpp  Table.hpp
src/: Application.cpp  Chess.cpp  Chess.hpp  Graphic.cpp  Graphic.hpp  Screen.cpp  Screen.hpp  main.cpp  main.hpp
src/BoardScreen/: Board.cpp  Board.hpp  ChessHistory.cpp  ChessHistory.hpp  (+4 more)
(+138 files in other folders)
